--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  		<title>Blog App</title>
+  		<title>De'Vision</title>
 <!-- 
 
 Highway Template
@@ -31,7 +31,7 @@ https://templatemo.com/tm-520-highway
   
     <nav>
         <div class="logo">
-            <a href="index.html">High<em>way</em></a>
+            <a href="/bologs"><img src="img/clogo.png" style="width:60px;height:60px"></a>
         </div>
         <div class="menu-icon">
         <span></span>
@@ -42,15 +42,12 @@ https://templatemo.com/tm-520-highway
         <div class="video-overlay"></div>
         <div class="video-content">
             <div class="inner">
-              <h1>Welcome to <em>Highway</em></h1>
-              <p>FREE CSS TEMPLATE by templatemo</p>
-              <p>Homepage with full-width image gallery</p>
-                <!-- <div class="scroll-icon">
-                  <i class="fas fa-plus-circle"></i>
-                    <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="img/scroll-icon.png" alt=""></a>
-                    <button type="button" class="btn btn-light">Dark</button>  
-                </div>     -->
-                <a href="/blogs/new"><img src="img/scroll-icon.png" alt=""></a>
+              <h1>Welcome to <em>De'Vision</em></h1>
+              <br>
+                <div class="scroll-icon">
+                    <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="img/scroll-icon.png" alt=""></a>  
+                </div>    
+                <!-- <a href="/blogs/new"><img src="img/scroll-icon.png" class="clogo" alt=""></a> -->
             </div>
         </div>
         <video autoplay="" loop="" muted>
@@ -61,6 +58,9 @@ https://templatemo.com/tm-520-highway
    
     <div class="grid-portfolio" id="portfolio">
         <div class="container">
+            <div class="text-content">
+                <h2 style="color: white;">Entries!</h2>
+            </div>
             <div class="row">
             <% blogs.forEach(function(blog){ %>
                 <div class="col-md-4 col-sm-6">
@@ -82,154 +82,13 @@ https://templatemo.com/tm-520-highway
             </div>
         </div>
         </div>
- 
-    <!-- <div class="full-screen-portfolio" id="portfolio">
-        <div class="container-fluid">
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="img/big_portfolio_item_4.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>Biodiesel <em>squid</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="img/portfolio_item_4.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="img/big_portfolio_item_2.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>raclette <em>taxidermy</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="img/portfolio_item_2.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="img/big_portfolio_item_3.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>humblebrag <em>brunch</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="img/portfolio_item_3.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="img/big_portfolio_item_1.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>Succulents <em>chambray</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="img/portfolio_item_1.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="img/big_portfolio_item_5.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>freegan <em>aesthetic</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="img/portfolio_item_5.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="img/big_portfolio_item_6.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>taiyaki <em>vegan</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="img/portfolio_item_6.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="img/big_portfolio_item_7.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>Thundercats <em>santo</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="img/portfolio_item_7.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="img/big_portfolio_item_8.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>wayfarers <em>yuccie</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="img/portfolio_item_8.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-            	<div class="portfolio-item">
-                	<a href="img/big_portfolio_item_9.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>disrupt <em>street</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="img/portfolio_item_9.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
-
+     
     <footer>
         <div class="container-fluid">
             <div class="col-md-12">
-                <p>Copyright &copy; 2018 Company Name 
+                <p>Designed by &copy; Imran 
     
-    | Designed by TemplateMo</p>
+    <!-- | Designed by TemplateMo</p> -->
             </div>
         </div>
     </footer>
@@ -289,25 +148,13 @@ https://templatemo.com/tm-520-highway
           <div class="main-menu">
               <ul>
                   <li>
-                      <a href="index.html">Home - Full-width</a>
+                      <a href="/blogs">Home</a>
                   </li>
                   <li>
-                      <a href="masonry.html">Home - Masonry</a>
-                  </li>
-                  <li>
-                      <a href="grid.html">Home - Small-width</a>
-                  </li>
-                  <li>
-                      <a href="about.html">About Us</a>
-                  </li>
-                  <li>
-                      <a href="blog.html">Blog Entries</a>
-                  </li>
-                  <li>
-                      <a href="single-post.html">Single Post</a>
+                      <a href="single-post.html">Contact Us</a>
                   </li>
               </ul>
-              <p>We create awesome templates for you.</p>
+              <p>Your Vision Designed</p>
           </div>
         </div>
       </div>
