--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,10 +47,10 @@ https://templatemo.com/tm-520-highway
               <h1>Welcome to <em>De'Vision</em></h1>
               <br><br><br><br><br><br>
               <!-- <a href="#" class="btn btn-outline-primary" role="button">Link Button</a> -->
-              <button type="button" class="btn btn-outline-primary"><a href="/blogs" style="color: black;" >Register With D2C <i class="fas fa-sign-in-alt"></i></a></button>
+              <button type="button" class="btn btn-outline-primary"><a href="https://dare2compete.com/o/de-vision-model-club-bit-sindri-dhanbad-127413" style="color: black;" >Register With D2C <i class="fas fa-sign-in-alt"></i></a></button>
               <br>
                 <div class="scroll-icon">
-                    <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="img/scroll-icon.png" alt=""></a>  
+                    <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="/img/scroll-icon.png" alt=""></a>  
                 </div>    
                 <!-- <a href="/blogs/new"><img src="img/scroll-icon.png" class="clogo" alt=""></a> -->
             </div>
@@ -60,11 +60,64 @@ https://templatemo.com/tm-520-highway
         </video>
     </div>
 
+    <div class="grid-portfolio">
+      <div class="container">
+      <div class="text-content">
+        <h1 style="color:white; text-align: center;">THE ORGANIZERS!</h1>
+      </div>
+      <div class="row">
+        <div style="color:#c0c2cf;">
+        <h3>Model Club is an attempt to epitomize the technical mindset, personality development, and success stories of this  premier technical institution of Jharkhand. 
+        </h3><h3>
+          Established in the year 1976, founded with the objective to hone the scientific mindset, the Model Club has been working with boundless commitment. The organization is the official techno-management association of the institute with a dedicated team of 60+ individuals. 
+        </h3><h3>
+          Pioneering technical revolution in the campus, the Model Club is proactively involved in conducting various seminars, workshops and the annual techno-management fest "Sandhaan".</h3>
+        </div>
+        <!-- <div col-md-6 col-sm-6>
+        <img src="/img/clogo.png" style="width:60px;height:60px">
+      </div> -->
+    </div>
+  </div>
+    </div>
+<!-- <br>
+<br> -->
+    <div class="grid-portfolio">
+      <div class="container">
+        <img src="/img/Picture12.png" style="display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 20%;">
+        </div>
+    </div>
+
+
+    <div class="grid-portfolio">
+      <div class="container">
+      <div class="text-content">
+        <h1 style="color:white; text-align: center;">De' Vision</h1>
+      </div>
+      <div class="row">
+        <div col-md-6 col-sm-6 style="color:#c0c2cf;">
+        <h3>The present time is tough for all of us. We all are encountering so many restrictions in our physical world but our vision can still fly. 
+
+          “Sight is what you see with your eyes. Vision is what you see with your minds.”</h3>
+          
+          <h3>Model Club, B.I.T Sindri, Dhanbad, Jharkhand in association with SASCO Steel Pvt Ltd. presents you with an opportunity to render your artistic vision to the world. With a plethora of things hovering about lately, there is more than a mere perception in our minds. Being a strongly opinionated generation, let’s exhibit what we apprehend!
+          De'Vision, an indigenous illustration program aims to  foster creativity, and contrivance among budding artists.
+        </h3><h3>
+          Put on your thinking caps and let your digital canvas speak volumes. We introduce De’ Vision comprising a set of six themes to try your hands on.</h3>
+        </div>
+        <!-- <div col-md-6 col-sm-6>
+        <img src="/img/clogo.png" style="width:60px;height:60px">
+      </div> -->
+    </div>
+  </div>
+    </div>
    
     <div class="grid-portfolio" id="portfolio">
         <div class="container">
             <div class="text-content">
-                <h2 style="color: white;">Entries!</h2>
+                <h2 style="color: white;">Top Entries!</h2>
             </div>
             <div class="row">
             <% blogs.forEach(function(blog){ %>
@@ -89,8 +142,23 @@ https://templatemo.com/tm-520-highway
 
       <div class="container">
         <div class="text-content">
-          <h2 style="color: black; text-align: center;">Our Sponsors!</h2>
+          <h2 style="color: black; text-align: center;">In Association!</h2>
         </div>
+        <div class="row">
+          <div class="col-md-4 col-sm-6">
+            <div class="container" >
+              <img src="/img/slogo.png" style="display: block;
+              margin-left: auto;
+              margin-right: auto;
+              width: 50%;">
+            </div>
+          </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="text-content">
+            <h2 style="color: black; text-align: center;">Our In-Kind Sponsors!</h2>
+          </div>
         <div class="row">
           <div class="col-md-4 col-sm-6">
             <div class="portfolio-item">
