--- a/views/index.ejs
+++ b/views/index.ejs
@@ -167,7 +167,7 @@ https://templatemo.com/tm-520-highway
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="portfolio-item">
-              <img src="https://media-exp1.licdn.com/dms/image/C4E0BAQEPlrHmzQR7pQ/company-logo_200_200/0?e=2159024400&v=beta&t=VgfYK51PKZ_xqkXAkhZcY5svSFYs-o3BK_SRUpR7Jn0" alt="">
+              <a href="https://depositphotos.com/?utm_source=newsletter&utm_medium=email&utm_campaign=Model%20Club"><img src="/img/dposit.png" alt=""></a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
